force-app/main/default/objects/District__c/fields/ClanCapital__c.field-meta.xml
<CustomField>
    <fullName>ClanCapital__c</fullName>
    <label>Clan Capital</label>
    <referenceTo>ClanCapital__c</referenceTo>
    <relationshipLabel>Districts</relationshipLabel>
    <relationshipName>Districts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>