force-app/main/default/objects/District__c/fields/District_Hall_Level__c.field-meta.xml
<CustomField>
    <fullName>District_Hall_Level__c</fullName>
    <label>District Hall Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>