force-app/main/default/objects/District__c/fields/District_Id__c.field-meta.xml
<CustomField>
    <fullName>District_Id__c</fullName>
    <externalId>true</externalId>
    <label>District Id</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>